# LoveBrains

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  ai__food__collider_8h_source.html  ai__food__collision_8h_source.html  ai__vision__field_8h_source.html  api_2include_2_graphics_2environment_8h_source.html  api_2include_2_graphics_2factory__object_8h_source.html  api_2include_2_graphics_2graphics__const_8h_source.html  api_2include_2_graphics_2i__behavior_8h_source.html  api_2include_2_graphics_2i__brain_8h_source.html  api_2include_2_graphics_2i__object_8h_source.html  api_2include_2_graphics_2i__sensor_8h_source.html  api_2include_2_plugin_2i__plugin_8h_source.html  api_2include_2_plugin_2plugin__const_8h_source.html  api_2include_2_plugin_2plugin__manager_8h_source.html  api_2lib_2_a_n_n_library_2include_2_a_n_n_2ann__const_8h_source.html  api_2lib_2_a_n_n_library_2include_2_a_n_n_2ann__exception_8h_source.html  api_2lib_2_a_n_n_library_2include_2_a_n_n_2ann__layer_8h_source.html  api_2lib_2_a_n_n_library_2include_2_a_n_n_2matrix_8h_source.html  api_2lib_2_a_n_n_library_2include_2_a_n_n_2neural__net_8h_source.html  api_2lib_2_a_n_n_library_2include_2json_2json_8h_source.html  app_8h.html  app_8h_source.html  app__const_8h_source.html  app__exception_8h.html  app__exception_8h_source.html  basic__ia_8h_source.html  class_a_i_vision_field-members.html  class_a_i_vision_field.html  class_app-members.html  class_app_1_1_app-members.html  class_app_1_1_app.html  class_app_1_1_app_exception-members.html  class_app_1_1_app_exception.html  class_app_1_1_config_manager-members.html  class_app_1_1_config_manager.html  class_basic_a_i-members.html  (+345 more)
api/: README.md
brains/: advanced_brain_1.json  basic_survival_1.json  basic_survival_2_whaouu.json  brain_1.json  brain_2.json  good_brain_1.json  perouze_l.json  smart_brain_2.json  test.json
doc/: Doxyfile
html/: api_2include_2_graphics_2i__behavior_8h_source.html  api_2include_2_graphics_2i__brain_8h_source.html  api_2include_2_graphics_2i__sensor_8h_source.html  api_2include_2_graphics_2physics_8h_source.html  api_2include_2_plugin_2plugin__exception_8h_source.html  api_2lib_2_a_n_n_library_2include_2_a_n_n_2ann__const_8h_source.html  api_2lib_2_a_n_n_library_2include_2_a_n_n_2matrix_8h_source.html  api_2lib_2_a_n_n_library_2include_2_a_n_n_2tools_8h_source.html  api_2lib_2_a_n_n_library_2include_2json_2json-forwards_8h_source.html  app_8h.html  app_8h_source.html  app__exception_8h.html  app__exception_8h_source.html  basic__ia_8h_source.html  class_a_i_and_food_collision.html  class_a_i_vision_field-members.html  class_app.html  class_app_1_1_app-members.html  class_app_1_1_app_exception-members.html  class_app_1_1_app_exception.html  class_app_1_1_config_manager.html  class_basic_food-members.html  class_basic_food.html  class_collider_a_i_and_food-members.html  class_g_a_1_1_a_observable-members.html  class_g_a_1_1_a_observable.html  class_g_a_1_1_a_observer-members.html  class_g_a_1_1_g_a_engine-members.html  class_g_a_1_1_g_a_engine.html  class_g_a_1_1_i_d_n_a.html  class_g_a_1_1_population-members.html  class_g_a_1_1_population_exception-members.html  class_g_a_1_1_population_exception.html  class_g_a_n_n_1_1_a_n_n-members.html  class_g_a_n_n_1_1_a_n_n_exception.html  class_g_a_n_n_1_1_a_n_n_layer.html  class_g_a_n_n_1_1_g_a_n_n-members.html  class_g_a_n_n_1_1_g_a_n_n.html  class_g_a_n_n_1_1_g_a_n_n_engine-members.html  class_g_a_n_n_1_1_g_a_n_n_exception-members.html  (+190 more)
latex/: annotated.tex  app_8h.tex  class_a_i_and_food_collision.eps  class_a_i_vision_field.eps  class_app.tex  class_app_1_1_app.tex  class_app_1_1_app_exception.tex  class_basic_a_i.eps  class_basic_a_i.tex  class_basic_food.tex  class_collider_a_i_and_food.tex  class_g_a_1_1_a_observer.eps  class_g_a_1_1_g_a_engine.eps  class_g_a_1_1_i_d_n_a.eps  class_g_a_1_1_i_generator.eps  class_g_a_1_1_population_exception.eps  class_g_a_n_n_1_1_a_n_n_exception.eps  class_g_a_n_n_1_1_a_n_n_generator.tex  class_g_a_n_n_1_1_g_a_n_n_engine.tex  class_g_a_n_n_1_1_g_a_n_n_exception.eps  class_generator.eps  class_generator.tex  class_graphics_1_1_environment.eps  (+105 more)
(+1111 files in other folders)
